# supplier

./: Dockerfile  README.md  pyproject.toml
src/supplier_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/supplier_app/cli/: run.py
src/supplier_app/cli/supplierLib/: Database.py
src/supplier_app/cli/supplier_cli/: __init__.py
test/: test_ref_python.py
