[project]
name = "supplier-app"
version = "1.0.0"
description = "supplier-app"
authors = [
    {name = "Companyname", email = "company@email.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "urllib3==1.26.7",
    "click==8.1.3",
    "pyfiglet~=0.8.post1",
    "setuptools~=65.5.0",
    "pyodbc==5.1.0",
    "pandas==22.2.3.3",
    "openpyxl==3.1.5",
    "numpy==2.1.1"

]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
[tool.pdm.scripts]
supplier_app = {call = "src.supplier_app.cli.run:cli"}

[[tool.pdm.source]]
name = "private"
url = "http://company/repository/pypi-all/simple"
verify_ssl = false